--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,12 @@
 {
     "name": "JoyKey",
     "version": "1.1",
-    "description": "Map button presses from the Javascript Gamepad API to KeyboardEvents.",
-    "permissions": [
-      "activeTab"
-    ],
+    "description": "Map button presses from the Javascript Gamepad API to KeyboardEvents.", 
+    "permissions": ["storage", "activeTab", "scripting"],
     "background": {
-      "scripts": ["/src/background.js"],
-      "persistent": false
+      "service_worker": "background.js"
     },
-    "browser_action": {
+    "action": {
       "default_title": "Open layout editor",
       "default_popup": "panel.html",
       "default_icon": {
@@ -26,5 +23,5 @@
       "48": "/src/img/joyride-icon-48.png",
       "128": "/src/img/joyride-icon-128.png"
     },
-    "manifest_version": 2
+    "manifest_version": 3
   }
