--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,13 @@
     "version": "1.1",
     "description": "Map button presses from the Javascript Gamepad API to KeyboardEvents.", 
     "permissions": ["storage", "activeTab", "scripting"],
-    "background": {
-      "service_worker": "background.js"
-    },
+    "content_scripts": [
+      {
+        "matches": ["*://*/*"],
+        "all_frames": true,
+        "js": ["content.js"]
+      }
+    ],
     "action": {
       "default_title": "Open layout editor",
       "default_popup": "panel.html",
